Fix for dual scrollbars and console errors

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -6,7 +6,8 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: scroll;
-    overflow-x: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
